updating Rmd analysis

--- a/analysis.html
+++ b/analysis.html
@@ -65,12 +65,10 @@ img {
 <h1>Motion Project</h1>
 <div id="author---arnie-larson" class="section level4">
 <h4>Author - Arnie Larson</h4>
-<div id="incomplete-draft-based-on-overview.md" class="section level5">
-<h5>Incomplete Draft, based on overview.md</h5>
 <p>Project is part of a <a href="www.coursera.org">Coursera</a> <a href="https://class.coursera.org/predmachlearn-034">Machine Learning</a> class</p>
+<p>HTML version available <a href="https://arnielarson.github.io/analysis.html">here</a></p>
+<p>Coure Taught By: Jeff Leek, Johns Hopkins University</p>
 <p>Date: 2015-11-19</p>
-<p>Taught By: Jeff Leek, Johns Hopkins University</p>
-</div>
 </div>
 <div id="introduction" class="section level4">
 <h4>Introduction</h4>
